--- a/views/index.ejs
+++ b/views/index.ejs
@@ -1,5 +1,71 @@
-<h1>Hello World</h1>
-<form action="newObject" method="POST">
-    <label for="name">Name</label><input type="text" name="name">
-    <button>Submit</button>
-</form>
+<% let inGroup = ["Multi Site", "Group Site", "Landing Page"] %>
+
+<div id="mainContainer" class="flex-row">
+    <div id="descColumn" class="flex-column">
+        <h1><%= website.name %></h1>
+        <% if(typeof website != "undefined" && inGroup.includes(website.type)){ %>
+            <h3 id="groupString">Part of the <%= website.group %> group</h3>
+        <% } %>
+        <a href="<%= website.url %> " target="_blank">Visit the site</a>
+        <h3>Full Page List</h3>
+        <div id="pageList">
+            <% website.pageList.forEach(item =>{ %>
+                <h4><%= item %></h4> 
+            <%})%>
+
+        </div>
+        <h3>Feature List</h3>
+        <div id="featureList">
+            <% website.featureList.forEach(item =>{ %>
+                <h4><%= item %></h4> 
+            <%})%>
+        </div>
+        <% if(website.howItWasMade == "Wordpress"){ %>
+            <h4>Built using Wordpress & Elementor</h4>
+        <% }else if(website.howItWasMade == "Custom Built"){ %> 
+            <h4>Custom Built</h4>
+        <% }else{ %>
+            <h4>Unkown Origins</h4>
+        <% } %>  
+        <% let datePieces = website.liveDate.toISOString().split("T")[0].split("-"); let day = parseInt(datePieces[2])+1; if(day < 10)day = "0"+day; %>
+        <h4>Live since <%= `${day}/${datePieces[1]}/${datePieces[0]}` %></h4>
+    </div>
+    <div id="contentColumn" class="flex-column">
+        <div id="screenShots">
+            <% let defPath = "/images/temp.png"; %>
+            <div class="imageContainer">
+                <img src="<%= (typeof website != "undefined"?`${website.imagePath[0]}`:`${defPath}`)%>">
+            </div>
+            <div class="imageContainer">
+                <img src="<%= (typeof website != "undefined"?`${website.imagePath[1]}`:`${defPath}`)%>">
+            </div>
+            <div class="imageContainer">
+                <img src="<%= (typeof website != "undefined"?`${website.imagePath[2]}`:`${defPath}`)%>">
+            </div>
+        </div>
+        <div id="controls" class="flex-row">
+            <div class="deviceButton"><img src="/images/desktopTemplate.png"></div>
+            <div class="deviceButton"><img src="/images/tabletTemplate.png"></div>
+            <div class="deviceButton"><img src="/images/phoneTemplate.png"></div>
+        </div>
+    </div>
+    <div id="disclaimer">Pages and Features are not limited to this design</div>
+</div>
+
+<script>
+
+    let currentDevice = 0;
+    let screenshots = document.getElementsByClassName("imageContainer");
+    let deviceButtons = document.getElementsByClassName("deviceButton");
+    for(let i = 0; i < deviceButtons.length; i++){
+        deviceButtons[i].addEventListener("click", ()=>changeDevice(i));
+    }
+
+    changeDevice = index =>{
+        if(currentDevice == index)return;
+        screenshots[currentDevice].style.transform = "scale(0)";
+        screenshots[index].style.transform = "scale(1)";
+        currentDevice = index;
+        
+    }
+</script>
