--- a/views/partials/formPartials/image_fields.ejs
+++ b/views/partials/formPartials/image_fields.ejs
@@ -4,12 +4,12 @@
             <label>Desktop Image (width 500px)</label>
             <input type="file" class="filepond" name="desktopImage" required>
         </div>
-        <div class="flex-column">
+        <!-- <div class="flex-column">
             <label>Tablet Image (width 500px)</label>
             <input type="file" class="filepond" name="tabletImage" required>
-        </div>
+        </div> -->
     </div>
-    <div class="flex-row">
+    <!-- <div class="flex-row">
         <div class="flex-column">
             <label>Mobile Image (width 360px)</label>
             <input type="file" class="filepond" name="mobileImage" required>
@@ -18,5 +18,5 @@
             <label>Background Image (1500x1000)</label>
             <input type="file" class="filepond" name="backgroundImage" required>
         </div>
-    </div>
+    </div> -->
 </div>
