--- a/views/partials/formPartials/css_fields.ejs
+++ b/views/partials/formPartials/css_fields.ejs
@@ -1,12 +1,35 @@
 <div class="flex-column absColumn">
-    <h2>Font Selection</h2>
     <div class="flex-row">
         <div class="flex-column">
-            <%- include ("./font_select")%>
+            <select class="fontSelect">
+                <% fonts.forEach(item =>{ %>
+                    <% if(typeof website != "undefined"){ %>
+                        <% if(website.primaryFont == item){ %>
+                            <option selected><%= item %></option>
+                        <% }else{ %>
+                            <option><%= item %></option>
+                        <%}%>
+                    <% }else{ %>
+                        <option><%= item %></option>
+                    <%}%>
+                <%})%>
+            </select>
             <h3 id="primaryHeader">Hotel name</h3>
         </div>
         <div class="flex-column">
-            <%- include ("./font_select")%>
+            <select class="fontSelect">
+                <% fonts.forEach(item =>{ %>
+                    <% if(typeof website != "undefined"){ %>
+                        <% if(website.secondaryFont == item){ %>
+                            <option selected><%= item %></option>
+                        <% }else{ %>
+                            <option><%= item %></option>
+                        <%}%>
+                    <% }else{ %>
+                        <option><%= item %></option>
+                    <%}%>
+                <%})%>
+            </select>
             <h3 id="secondaryHeader">Visit the site</h3>
         </div>
     </div>
