Commit from laptop

--- a/views/layouts/layout.ejs
+++ b/views/layouts/layout.ejs
@@ -29,6 +29,7 @@
 </head>
 <body>
     <script>let reqs = [];</script>
+    <h1>Testing</h1>
     <%- body %>
     <script>
         setTimeout(()=>{
