--- a/public/css/main.css
+++ b/public/css/main.css
@@ -42,17 +42,15 @@ body{
     align-items: center;
     justify-content: center;
     position: relative;
-    flex:1;
+    height: 100%;
 }
 
 .flex-row{
     display: flex;
     flex-direction: row;
     flex-wrap: wrap;
-    align-items: center;
     justify-content: center;
     position: relative;
-    width:100%;
 }
 
 ::-webkit-scrollbar{
@@ -79,6 +77,7 @@ body{
     align-items: center;
     justify-content: flex-end;
     padding: 0.5vh 3vw 1vh;
+    width:100vw;
 }
 
 #adminHeader a{
