--- a/public/css/home.css
+++ b/public/css/home.css
@@ -144,3 +144,29 @@ p{
     filter: brightness(0.45);
     z-index: -1;
 }
+
+.previewText{
+    font-family: 'Oswald', sans-serif;
+    color:#888;
+    font-size: 1em;
+    position: absolute;
+    bottom:2.2rem;
+    left:0.8rem;
+}
+
+#previewSection{
+    position: absolute;
+    top:-2rem;
+    left:1rem;
+    z-index: 90;
+    width:250px;
+    max-height: 250px;
+    overflow:hidden;
+    transform: scale(0);
+    transition: transform 0.3s;
+    transform-origin: bottom left;
+}
+
+#previewSection img{
+    width: 100%;
+}
