--- a/public/css/site.css
+++ b/public/css/site.css
@@ -76,7 +76,7 @@ a:hover,#learnMoreButton:hover{
 
 
 #prevTemplate, #nextTemplate{
-    position: fixed;
+    position: absolute;
     top:40vh;
     font-family: var(--defaultFont);
     color:white;
@@ -357,6 +357,7 @@ a:hover,#learnMoreButton:hover{
     color:#fff;
     font-size: 0.8em;
     margin-bottom:0.5rem;
+    text-align: left;
 }
 
 #offScreenRight .internalLink{
@@ -379,4 +380,27 @@ a:hover,#learnMoreButton:hover{
 
 #stars span{
     font-size: 1.5em;
+}
+
+@media only screen and (min-width:768px) and (max-width:1024px){
+    #imageContainer{
+        width: 70vw;
+        min-height: 45vw;
+    }
+    #offScreenRight{
+        width:40vw;
+    }
+    #nextTemplate h3, #prevTemplate h3 {
+        max-width:120px;
+    }
+    p{
+        font-size: 1rem;
+        text-align: center;
+    }
+    #imageContainer #mobileHolder .imageScroller {
+        top:4.4vh;
+    }
+    #imageContainer #tabletHolder {
+        right:-5vw;
+    }
 }
